# opensase-sdk

./: .env.example  .gitignore  API_SPEC.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  PLAN.md  README.md  RUNBOOK.md  SECURITY.md
.github/workflows/: ci.yml  docs-and-quality.yml  perf-hardening.yml
ADR/: ADR-0001-sovereign-baseline.md
design/: FIGMA_MAKE_PROMPT.token
eventing/pulsar/: client-config.yaml  topics.yaml
infrastructure/kubernetes/harvester/: storage-baseline.yaml
observability/: log-schema.json
observability/quickwit/: index-config.yaml
scripts/perf/: profile.sh
src/: error.rs  lib.rs  webhooks.rs
src/client/: mod.rs
src/domain/: common.rs  mod.rs
src/domain/commerce/: mod.rs
src/domain/crm/: mod.rs
src/domain/identity/: mod.rs
src/domain/payments/: mod.rs
src/services/: mod.rs
