[package]
name = "opensase-sdk"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for the OpenSASE Platform API"
license = "Proprietary"
repository = "https://github.com/billyronks/opensase"
documentation = "https://docs.opensase.billyronks.io"
keywords = ["opensase", "api", "sdk", "saas"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
